PLANET-5189 ImageArchive optimize sizes
* Fetch largest size instead of specific path, assuming that will always
be the original.
* Set a max width on sizes used in srcSet to avoid downloading the full
image for a tiny visual difference. On high res screens this means
downloading a few 100 kB instead of a few MB.

--- a/admin/css/picker.css
+++ b/admin/css/picker.css
@@ -1,3 +1,5 @@
+/* Todo: Change to scss, separate styles that are essential to the ImagePicker component to work (if there are any)
+     from ArchivePicker styles*/
 .picker-list {
   max-width: 60%;
   max-height: 75vh;
@@ -57,6 +59,8 @@ li.picker-selected {
 
 .picker-sidebar-single img {
   max-height: 30vh;
+  object-fit: cover;
+  width: 100%;
 }
 
 .archive-picker-loading {
