PLANET-5189 Add eslint config
* Had to add some rules to prevent eslint flagging certain things (jsx
usage of variables and global wp usage). Probably there's a better way
to set this up.

--- a/admin/css/picker.css
+++ b/admin/css/picker.css
@@ -1,5 +1,6 @@
 /* Todo: Change to scss, separate styles that are essential to the ImagePicker component to work (if there are any)
      from ArchivePicker styles*/
+
 .picker-list {
   max-width: 60%;
   max-height: 75vh;
@@ -20,7 +21,7 @@
   background: white;
   position: absolute;
   top: 0;
-  right: 0
+  right: 0;
 }
 
 .image-picker li img {
