PLANET-5442: Unordered list font size bigger than paragraph in the editor
Ref: https://jira.greenpeace.org/browse/PLANET-5442

Unset font-size modifications set by styleguide.

--- a/assets/src/styles/editorOverrides.scss
+++ b/assets/src/styles/editorOverrides.scss
@@ -13,8 +13,14 @@
   }
 }
 
-.edit-post-visual-editor .wp-block {
-  max-width: 90%;
+.edit-post-visual-editor {
+  .wp-block {
+    max-width: 90%;
+  }
+
+  li {
+    font-size: unset;
+  }
 }
 
 .wp-block-image {
