--- a/src/layout/_forms.scss
+++ b/src/layout/_forms.scss
@@ -1,15 +1,15 @@
 // Forms
 //
 // Markup:
-// <label class="custom-control custom-checkbox">
+// <label class="custom-control">
 //   <input type="checkbox" name="checkbox_name" />
 //   <span class="custom-control-description">Check me</span>
 // </label>
-// <label class="custom-control custom-radio">
+// <label class="custom-control">
 //   <input type="radio" name="radio_name" value="1" />
 //   <span class="custom-control-description">Select me</span>
 // </label>
-// <label class="custom-control custom-checkbox">
+// <label class="custom-control">
 //   <input type="radio" name="radio_name" value="2" />
 //   <span class="custom-control-description">Or me</span>
 // </label>
@@ -19,140 +19,202 @@
   input[type="checkbox"] {
     position: absolute;
     opacity: 0;
+    pointer-events: none;
+
+    &:not(:disabled) + .custom-control-description:hover:before {
+      border-color: $grey-80;
+    }
 
     & + .custom-control-description {
       position: relative;
       cursor: pointer;
-      padding: 0;
-    }
-
-    & + .custom-control-description:before {
-      content: "";
-      margin-right: 10px;
+      font-family: $roboto;
+      font-size: $font-size-xxxs;
+      line-height: 1rem;
+      color: $grey-80;
       display: inline-block;
-      vertical-align: top;
-      width: 26px;
-      height: 26px;
-      background: transparent;
-      border: 3px solid $med-blue;
-      border-radius: 4px;
+      padding-inline-start: 36px;
 
-      html[dir="rtl"] & {
-        margin-right: 0;
-        margin-left: 10px;
+      a {
+        color: $grey-80;
+        font-weight: bold;
+      }
+
+      &:before {
+        content: "";
+        width: 20px;
+        height: 20px;
+        background: $white;
+        border: 1px solid $grey-20;
+        border-radius: 2px;
+        left: 0;
+        position: absolute;
+        top: calc((100% - 20px) / 2);
+
+        html[dir="rtl"] & {
+          right: 0;
+          left: auto;
+        }
       }
     }
 
-    &:checked + .custom-control-description:before {
-      background: $med-blue;
-    }
+    &:checked + .custom-control-description {
+      &:before {
+        border-color: $grey-80;
+      }
 
-    &:checked + .custom-control-description:after {
-      content: "";
-      position: absolute;
-      left: 7px;
-      top: 10px;
-      background: white;
-      width: 4px;
-      height: 4px;
-      box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white, 4px -6px 0 white, 4px -8px 0 white;
-      transform: rotate(45deg);
+      &:after {
+        content: "";
+        position: absolute;
+        -moz-transform: rotate(-45deg) scale(-1, 1);
+        -webkit-transform: rotate(-45deg) scale(-1, 1);
+        -o-transform: rotate(-45deg) scale(-1, 1);
+        -ms-transform: rotate(-45deg) scale(-1, 1);
+        transform: rotate(-45deg) scale(-1, 1);
+        border-bottom: 2px solid $grey-80;
+        border-right: 2px solid $grey-80;
+        top: calc(((100% - 20px) / 2) + 5px);
+        left: 4px;
+        height: 8px;
+        width: 12px;
 
-      html[dir="rtl"] & {
-        left: auto;
-        right: 7px;
+        html[dir="rtl"] & {
+          left: auto;
+          right: 4px;
+        }
       }
     }
 
     &:disabled + .custom-control-description {
       cursor: auto;
-    }
 
-    &:disabled + .custom-control-description:before {
-      box-shadow: none;
-      border-color: #aaa;
+      &:before {
+        opacity: 0.5;
+      }
     }
   }
 
   input[type="radio"] {
-    font-family: $roboto;
-    font-size: $font-size-md;
     position: absolute;
+    pointer-events: none;
     opacity: 0;
-    cursor: pointer;
+
+    &:not(:disabled) + .custom-control-description:hover:before {
+      border-color: $grey-80;
+    }
 
     & + .custom-control-description {
-      vertical-align: text-bottom;
       position: relative;
       cursor: pointer;
-      padding: 0;
-    }
+      font-family: $roboto;
+      font-size: $font-size-sm;
+      line-height: 1.25rem;
+      color: $grey-80;
+      padding-inline-start: 36px;
 
-    & + .custom-control-description:before {
-      content: "";
-      margin-right: 32px;
-      display: inline-block;
-      vertical-align: middle;
-      width: 20px;
-      height: 20px;
-      background: #fff;
-      border: 2.5px solid $grey-40;
-      border-radius: 50%;
-      padding: 2px;
-      text-align: center;
-    }
+      a {
+        color: $grey-80;
+        font-weight: bold;
+      }
 
-    &:hover + .custom-control-description:before {
-      border: 2.5px solid $grey-60;
+      &:before {
+        content: "";
+        width: 20px;
+        height: 20px;
+        background: $white;
+        border: 1px solid $grey-20;
+        border-radius: 50%;
+        left: 0;
+        position: absolute;
+        top: calc((100% - 20px) / 2);
+
+        html[dir="rtl"] & {
+          right: 0;
+          left: auto;
+        }
+      }
     }
 
     &:checked + .custom-control-description:before {
-      background: $med-blue;
-      box-shadow: inset 0 0 0 2px white;
-      border: 2.5px solid $dark-blue;
+      background: $grey-80;
+      box-shadow: inset 0 0 0 2px $white;
+      border-color: $grey-80;
     }
   }
 }
 
-.toggle {
-  height: 0;
-  width: 0;
-  visibility: hidden;
-}
-
-.toggle-label {
-  cursor: pointer;
-  text-indent: -9999px;
-  width: 64px;
-  height: 32px;
-  background: none;
-  display: block;
-  border-radius: 100px;
-  border: 1px solid #074365;
-  position: relative;
-}
-
-.toggle-label:after {
-  content: "";
-  position: absolute;
-  top: 3px;
-  left: 3px;
-  width: 25px;
-  height: 25px;
-  background: #074365;
-  border-radius: 90px;
-  transition: 0.3s;
-}
-
-.toggle:checked + .toggle-label {
-  background: #97ed90;
-}
-
-.toggle:checked + .toggle-label:after {
-  left: calc(100% - 3px);
-  transform: translateX(-100%);
-}
-
 .form-control {
   border-radius: 4px;
+  font-family: $roboto;
+  background-color: $white;
+  border: 1px solid $grey-20;
+  color: $grey-80;
+  padding: 0 16px;
+  font-size: $font-size-sm;
+
+  &::placeholder,
+  &::-webkit-input-placeholder,
+  &::-ms-input-placeholder {
+    color: $grey-40;
+  }
+
+  &:hover {
+    border-color: $grey-40;
+  }
+
+  &:focus {
+    box-shadow: 0 0 0 2px rgba(0, 109, 253, 0.4);
+    color: $grey-80;
+    border-color: transparent;
+  }
+}
+
+input[type="text"].form-control,
+input[type="email"].form-control {
+  height: auto;
+  padding: 11px 16px;
+}
+
+select.form-control {
+  height: 48px;
+
+  &:invalid {
+    color: $grey-40;
+  }
+
+  option[value=""][disabled] {
+    display: none;
+  }
+}
+
+textarea.form-control {
+  padding: 12px 16px;
+  resize: none;
+}
+
+.form-group.animated-label {
+  position: relative;
+
+  label {
+    position: absolute;
+    left: 0;
+    top: 16px;
+    font-weight: 500;
+    color: $grey-40;
+    padding-inline-start: 16px;
+    font-size: 11px;
+    font-family: $roboto;
+    opacity: 0;
+    transition: all .3s ease;
+    margin-bottom: 0;
+  }
+
+  .form-control:not(:placeholder-shown) {
+    padding: 18px 16px 4px 16px;
+
+    & ~ label {
+      transform: translateY(-10px);
+      opacity: 1;
+    }
+  }
 }
