--- a/templates/search.twig
+++ b/templates/search.twig
@@ -333,7 +333,7 @@
 				<div class="col-lg-8">
 					<div class="result-area">
 						<div class="sort-filter clearfix">
-							<div class="float-right">
+							<div class="float-end">
 								<label class="mr-sm-2" for="select_order">{{ __('Sort by', 'planet4-master-theme' ) }}</label>
 								<select
 										id="select_order"
