--- a/src/layout/_forms.scss
+++ b/src/layout/_forms.scss
@@ -143,7 +143,8 @@
   }
 }
 
-.form-control {
+.form-control,
+.form-select {
   border-radius: 4px;
   font-family: $roboto;
   background-color: $white;
@@ -175,7 +176,7 @@ input[type="email"].form-control {
   padding: 11px 16px;
 }
 
-select.form-control {
+.form-select {
   height: 48px;
 
   &:invalid {
