PLANET-5981 Update selects for Bootstrap 5 migration

--- a/templates/search.twig
+++ b/templates/search.twig
@@ -334,10 +334,10 @@
 					<div class="result-area">
 						<div class="sort-filter clearfix">
 							<div class="float-end">
-								<label class="mr-sm-2" for="select_order">{{ __('Sort by', 'planet4-master-theme' ) }}</label>
+								<label class="me-sm-2" for="select_order">{{ __('Sort by', 'planet4-master-theme' ) }}</label>
 								<select
 										id="select_order"
-										class="form-control"
+										class="form-select"
 										name="select_order"
 										data-ga-category="Search Page"
 										data-ga-action="Sort By Filter"
