--- a/templates/search.twig
+++ b/templates/search.twig
@@ -67,7 +67,7 @@
 											<div class="col-9">
 												<h4 class="modal-title">{{ __( 'Refine your search', 'planet4-master-theme' ) }}</h4>
 											</div>
-											<div class="col-3 text-right">
+											<div class="col-3 text-end">
 												<button type="button" class="closebtn" data-bs-dismiss="modal">
 													{{ 'times'|svgicon }}
 												</button>
