--- a/src/components/_share-buttons.scss
+++ b/src/components/_share-buttons.scss
@@ -5,17 +5,17 @@
 //   <!-- Facebook -->
 //   <a href="#" class="share-btn facebook">
 //     <svg viewBox="0 0 32 32" class="icon"><use xlink:href="images/symbol/svg/sprite.symbol.svg#facebook-f"></use></svg>
-//     <span class="visually-hidden">Share on Facebook</span>
+//     <span class="sr-only">Share on Facebook</span>
 //   </a>
 //   <!-- Twitter -->
 //   <a href="#" class="share-btn twitter">
 //     <svg viewBox="0 0 32 32" class="icon"><use xlink:href="images/symbol/svg/sprite.symbol.svg#twitter"></use></svg>
-//     <span class="visually-hidden">Share on Twitter</span>
+//     <span class="sr-only">Share on Twitter</span>
 //   </a>
 //   <!-- Email -->
 //   <a href="#" class="share-btn email">
 //     <svg viewBox="0 0 32 32" class="icon"><use xlink:href="images/symbol/svg/sprite.symbol.svg#envelope"></use></svg>
-//     <span class="visually-hidden">Share via Email</span>
+//     <span class="sr-only">Share via Email</span>
 //   </a>
 // </div>
 //
