--- a/assets/src/scss/base/_typography.scss
+++ b/assets/src/scss/base/_typography.scss
@@ -18,12 +18,15 @@ html {
 p,
 li {
   hyphens: none;
-  font-size: $font-size-sm;
-  line-height: 1.6rem;
 
-  @include x-large-and-up {
-    font-size: $font-size-md;
-    line-height: 1.75rem;
+  --text-- {
+    font-size: $font-size-sm;
+    line-height: 1.6rem;
+
+    @include x-large-and-up {
+      font-size: $font-size-md;
+      line-height: 1.75rem;
+    }
   }
 }
 
@@ -46,8 +49,10 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $roboto;
-  font-weight: bold;
+  --headings-- {
+    font-family: $roboto;
+    font-weight: bold;
+  }
 
   &.has-text-align-center,
   &.has-text-align-right,
@@ -126,12 +131,12 @@ h6 {
 // :hover     - hovered state
 //
 // Styleguide Style.typography.links
-a {
-  color: var(--link--color, $link-color);
+a --link-- {
+  color: $link-color;
   text-decoration: none;
 
   &:hover {
-    color: var(--link-hover--color, $link-color);
+    color: $link-color;
     text-decoration: underline;
   }
 }
