--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -12,23 +12,25 @@
 .btn,
 .wp-block-button a,
 .wp-block-file .wp-block-file__button {
+  --button-- {
+    font-family: $roboto;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 4px;
+    padding: 0 30px;
+    transition-property: color, background-color, border-color;
+    transition-duration: 150ms;
+    transition-timing-function: linear;
+  }
   display: inline-block;
   position: relative;
-  font-family: $roboto;
   font-size: $font-size-sm;
-  text-align: center;
   text-decoration: none;
   color: $white;
-  font-weight: bold;
-  border-radius: 4px;
   border: 1px solid transparent;
   cursor: pointer;
   line-height: 3;
-  padding: 0 $n30;
   appearance: none;
-  transition-property: color, background-color, border-color;
-  transition-duration: 150ms;
-  transition-timing-function: linear;
 
   &:hover,
   &:focus,
@@ -70,23 +72,32 @@
   line-height: 3.1;
 }
 
+$primary-button-box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
+
 .btn-primary,
 .wp-block-button.is-style-cta a {
-  background-color: $orange;
-  color: var(--btn-primary-color, $white);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
+  --button-primary-- {
+    background: $orange;
+    color: $white;
+    // Adding this here so that the variable exists, though technically not needed.
+    // This allows for the hover variable to be previewed.
+    border-color: transparent;
+    box-shadow: $primary-button-box-shadow;
 
-  &:hover,
-  &:focus,
-  &:active {
-    background-color: $orange-hover;
-    border-color: $orange-hover;
-  }
+    &:hover,
+    &:focus,
+    &:active {
+      background: $orange-hover;
+      color: $white;
+      border-color: $orange-hover;
+      box-shadow: $primary-button-box-shadow;
+    }
 
-  &:disabled,
-  &.disabled,
-  &[disabled] {
-    background-color: $orange;
+    &:disabled,
+    &.disabled,
+    &[disabled] {
+      background: $orange;
+    }
   }
 }
 
@@ -94,36 +105,39 @@
 .wp-block-button.is-style-secondary a,
 [class="wp-block-button"] a,
 .wp-block-file .wp-block-file__button {
-  background-color: transparentize($white, .7);
-  border-color: $dark-blue;
-  color: $dark-blue;
-  box-shadow: none;
+  --button-secondary-- {
+    background: transparentize($white, .7);
+    border-color: $dark-blue;
+    color: $dark-blue;
+    box-shadow: none;
+
+    &:visited {
+      color: $dark-blue;
+    }
+
+    &:hover,
+    &:focus {
+      background: $dark-blue;
+      border-color: $dark-blue;
+      color: $white;
+    }
+
+    &:active {
+      background: $active-blue;
+      border-color: $active-blue;
+    }
+
+    &:disabled,
+    &.disabled,
+    &[disabled] {
+      background: $white;
+      color: $dark-blue;
+    }
+  }
+
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-
-  &:visited {
-    color: $dark-blue;
-  }
-
-  &:hover,
-  &:focus {
-    background-color: $dark-blue;
-    border-color: $dark-blue;
-    color: $white;
-  }
-
-  &:active {
-    background-color: $active-blue;
-    border-color: $active-blue;
-  }
-
-  &:disabled,
-  &.disabled,
-  &[disabled] {
-    background-color: $white;
-    color: $dark-blue;
-  }
 }
 
 // The new core buttons block wrap in "wp-block-buttons" class which apply
@@ -151,21 +165,29 @@
   }
 }
 
+$donate-button-box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
+
 .btn-donate,
 .wp-block-button.is-style-donate a {
-  background-color: var(--btn-donate-background-color, $aquamarine);
-  color: var(--btn-donate-color, $grey-80);
-  line-height: 1.65;
-  min-width: 180px;
-  margin: 0;
-  padding: 2px $n30;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
-  text-transform: none;
+  --button-donate-- {
+    background: $aquamarine;
+    color: $grey-80;
+    min-width: 180px;
+    padding: 2px 30px;
+    box-shadow: $donate-button-box-shadow;
+    border-width: 1px;
+    border-color: transparent;
 
-  &:hover,
-  &:focus {
-    color: transparentize($grey-80, 0.2);
+    &:hover,
+    &:focus {
+      background: $aquamarine;
+      color: transparentize($grey-80, 0.2);
+      box-shadow: $donate-button-box-shadow;
+    }
   }
+  line-height: 1.65;
+  margin: 0;
+  text-transform: none;
 
   @include large-and-up {
     font-size: $font-size-md;
