--- a/assets/src/scss/layout/_page-section.scss
+++ b/assets/src/scss/layout/_page-section.scss
@@ -1,4 +1,8 @@
-.page-section-header {
+.page-section-header _-- {
+  text-transform: none;
+  color: inherit;
+  font-weight: var(--headings--font-weight, bold);
+  font-size: 2.5rem;
   margin-bottom: $space-md;
 }
 
