Configurable article font-size

--- a/assets/src/styles/blocks/Articles.scss
+++ b/assets/src/styles/blocks/Articles.scss
@@ -120,6 +120,9 @@
 }
 
 .article-list-item-content {
+  --block-articles--article--content-- {
+    font-size: inherit;
+  }
   display: none;
   margin: $space-xs 0 0;
   width: 80%;
