--- a/assets/src/styles/editorStyle.scss
+++ b/assets/src/styles/editorStyle.scss
@@ -26,6 +26,7 @@
 @import "components/Preview";
 @import "components/CharacterCounter";
 @import "campaigns/base/fonts";
+@import "campaigns/base/google_fonts";
 @import "components/FormSectionTitle";
 @import "components/FormHelp";
 @import "components/InlineFormFeedback";
