Remove jquery from load_more component
This replaces all jquery references in the component to using
raw DOM APIs instead. Note that this uses the `fetch` api,
which may not be available in older browsers. I am not sure
if we need to support browsers that do not have fetch in it.

--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -245,3 +245,10 @@ $donate-button-box-shadow: 0 2px 5px rgba(0, 0, 0, .25);
     outline: none;
   }
 }
+
+button.load-more-mt {
+  &.hide-load-more {
+    opacity: 0;
+    transition: opacity 400ms;
+  }
+}
