--- a/templates/author.twig
+++ b/templates/author.twig
@@ -45,7 +45,7 @@
 			<div class="row">
 				<div class="col-md-12 col-lg-5 col-xl-5 mt-3">
 					<button
-						data-bs-content=".multiple-search-result .list-unstyled"
+						data-content=".multiple-search-result .list-unstyled"
 						data-page="1"
 						data-total="{{ posts.pagination.total }}"
 						data-url="{{ author.path }}"
